# pulse-null

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: claude_provider.rs  context.rs  main.rs  ollama_provider.rs  pidfile.rs  providers.rs  session.rs
src/chat/: banner.rs  mod.rs  repl.rs  theme.rs
src/cli/: archive.rs  chat.rs  down.rs  init.rs  intent.rs  mod.rs  pipeline.rs  plugin.rs  recall.rs  schedule.rs  status.rs  up.rs
src/config/: mod.rs  validate.rs
src/events/: listener.rs  mod.rs
src/init/: mod.rs  templates.rs  wizard.rs
src/llm/: claude_api.rs  mod.rs
src/memory/: mod.rs
src/monitoring/: assess.rs  mod.rs  signals.rs
src/pipeline/: archive.rs  health.rs  mod.rs
src/plugins/: bridge_echo.rs  caliber_echo.rs  chat_echo.rs  manager.rs  mod.rs  praxis_echo.rs  pulse_echo.rs  recall_echo.rs  registry.rs  vigil_echo.rs
src/plugins/discord_echo/: config.rs  mod.rs
src/plugins/discord_text_echo/: config.rs  mod.rs
src/plugins/voice_echo/: config.rs  mod.rs
src/scheduler/: cost.rs  dynamic.rs  executor.rs  intent.rs  mod.rs  output.rs  runner.rs  tasks.rs
src/server/: auth.rs  e2e_tests.rs  injection.rs  mod.rs  prompt.rs  rate_limit.rs  trust.rs
src/server/handlers/: chat.rs  dashboard.rs  mod.rs  status.rs
src/tools/: file_list.rs  file_read.rs  file_write.rs  grep.rs  mod.rs  web_fetch.rs
static/: chat.js  index.html  style.css
