[package]
name = "echo-system"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
description = "One binary. One command. Your own AI entity."
repository = "https://github.com/dnacenta/echo-system"
keywords = ["ai", "entity", "assistant", "claude", "llm"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for Claude API)
reqwest = { version = "0.12", features = ["json"] }

# Security
regex = "1"

# File tools
walkdir = "2"
globset = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Interactive prompts (init wizard)
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Scheduler
cron = "0.15"
chrono-tz = "0.10"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Shared types
echo-system-types = { git = "https://github.com/dnacenta/echo-system-types", tag = "v0.1.0" }

# Plugins (optional)
voice-echo = { git = "https://github.com/dnacenta/voice-echo", branch = "development", optional = true }
chat-echo = { git = "https://github.com/dnacenta/chat-echo", branch = "development", optional = true }
discord-voice-echo = { git = "https://github.com/dnacenta/discord-voice-echo", branch = "development", optional = true }
bridge-echo = { git = "https://github.com/dnacenta/bridge-echo", branch = "development", optional = true }
recall-echo = { git = "https://github.com/dnacenta/recall-echo", branch = "development", optional = true }
praxis-echo = { git = "https://github.com/dnacenta/praxis-echo", branch = "development", optional = true }
vigil-echo = { git = "https://github.com/dnacenta/vigil-echo", branch = "development", optional = true }

[features]
default = []
voice = ["dep:voice-echo"]
chat = ["dep:chat-echo"]
discord = ["dep:discord-voice-echo", "voice"]
bridge = ["dep:bridge-echo"]
recall = ["dep:recall-echo"]
praxis = ["dep:praxis-echo"]
vigil = ["dep:vigil-echo"]
all-plugins = ["voice", "chat", "discord", "bridge", "recall", "praxis", "vigil"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
