[package]
name = "pulse-null"
version = "0.11.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-only"
description = "One binary. One command. Your own AI entity."
repository = "https://github.com/dnacenta/pulse-null"
keywords = ["ai", "entity", "assistant", "claude", "llm"]
categories = ["command-line-utilities"]
authors = ["dnacenta"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (for Claude API)
reqwest = { version = "0.12", features = ["json"] }

# Security
regex = "1"

# File tools
walkdir = "2"
globset = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Interactive prompts (init wizard)
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# Scheduler
cron = "0.15"
chrono-tz = "0.10"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

# Shared types
echo-system-types = { git = "https://github.com/dnacenta/echo-system-types", branch = "main" }

# Core dependencies (always included — these define an entity)
vigil-echo = { git = "https://github.com/dnacenta/vigil-echo", tag = "v0.4.0" }
praxis-echo = { git = "https://github.com/dnacenta/praxis-echo", tag = "v0.4.0" }
chat-echo = { git = "https://github.com/dnacenta/chat-echo", tag = "v0.3.0" }
bridge-echo = { git = "https://github.com/dnacenta/bridge-echo", tag = "v0.4.0" }
recall-echo = { git = "https://github.com/dnacenta/recall-echo", tag = "v2.1.0" }
caliber-echo = { git = "https://github.com/dnacenta/caliber-echo", tag = "v0.3.0", package = "caliber-echo" }

# Plugins (optional — different interfaces to speak through)
voice-echo = { git = "https://github.com/dnacenta/voice-echo", tag = "v0.8.0", optional = true }
discord-voice-echo = { git = "https://github.com/dnacenta/discord-voice-echo", tag = "v0.3.0", optional = true }
discord-echo = { git = "https://github.com/dnacenta/discord-echo", tag = "v0.2.0", optional = true }

[features]
default = []
voice = ["dep:voice-echo"]
discord = ["dep:discord-voice-echo", "voice"]
discord-text = ["dep:discord-echo"]
all-plugins = ["voice", "discord", "discord-text"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
